test/src/e2e_vm_tests/test_programs/should_fail/associated_fn_as_method_call/src/main.sw
library;

struct Bar {}

impl Bar {
  fn associated() {}
}

pub fn main() {
  let bar = Bar {};
  bar.associated();
}
